# graduate_work

integrator_service/: README.md  docker-compose.yml  env.sample  pyproject.toml
integrator_service/nginx/: nginx.conf
integrator_service/src/: Dockerfile  main.py
integrator_service/src/core/: config.py
integrator_service/src/db/: orm.py
integrator_service/src/models/: payment.py
integrator_service/src/schema/: payments.py
integrator_service/src/worker/: celery_app.py
