[tool.poetry]
name = "integrator_service"
version = "0.1.0"
description = ""
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
sqlmodel = "^0.0.6"
orjson = "^3.6.7"
pydantic = "^1.9.0"
asyncpg = "^0.25.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.4"
celery = "^5.2.3"
aioredis = "^2.0.1"
redis = "^4.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
isort = "^5.10.1"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
